# websynth

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
backend/: .env  Dockerfile  app.py  entrypoint.sh  input.py  json_function.py  new_requirements.txt  requirements.txt  requirements3.txt
backend/agentic/: CustomToolNode.py  agent.py  agentic_notebook.ipynb  app.py  config.py  graph.py  output.txt  test.ipynb  test_nb.ipynb  tools.py  utils.py
backend/utils/: input.py  json_function.py
backend/vector-db/: data_creation.py  vector_search.py
backend/virtual-frontend/: package-lock.json  package.json
backend/virtual-frontend/src/app/: globals.css  layout.tsx  page.tsx
backend/virtual-frontend/src/app/about/: page.tsx
backend/virtual-frontend/src/app/events/: page.tsx
demos/test-app/: .gitignore  package-lock.json  package.json  tailwind.config.ts
demos/test-app/src/app/: globals.css  layout.tsx  page.js  page.tsx
dev/: docker-compose.yml
frontend/websynth/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/websynth/src/app/: layout.tsx  page.tsx
frontend/websynth/src/components/: BankerButton.tsx  Canvas.tsx  ComponentTag.tsx  DevSidebar.tsx  InputPrompt.tsx  Instructions.tsx  Sidesheet.tsx  WebsitePreview.tsx
frontend/websynth/src/types/: component.ts  global.d.ts  request.ts
frontend/websynth/src/utils/: captureScreenshot.ts  filesystem.tsx  sendRequestToBackend.ts  webcontainer.tsx
notebook/: claude_images.ipynb
websynth/: package-lock.json  package.json
(+15 files in other folders)
