[project]
name = "websynth"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "langchain-anthropic (>=0.3.5,<0.4.0)",
    "langchain-core (>=0.3.33,<0.4.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
